# duckingit

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  dotenv  mkdocs.yml  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
docs/: documentation.md  home.md  setup.md  tutorial.md
docs/assets/css/: extra.css
duckingit/: __init__.py  _analyze.py  _cache.py  _config.py  _controller.py  _dataset.py  _ducks.py  _encode.py  _enums.py  _exceptions.py  _extensions.py  _function.py  _optimizer.py  _parser.py  _planner.py  _provider.py  _session.py  _source.py  _utils.py
duckingit/integrations/: __init__.py  aws.py  base.py  providers.py
duckingit/providers/: __init__.py  aws.py  providers.py
image/: Dockerfile  Dockerfile.old  Makefile  install.py  lambda_handler.py
infrastructure/: main.tf
infrastructure/aws/: main.tf
infrastructure/aws/modules/lambda_function/: main.tf
infrastructure/aws/modules/lambda_layer/: main.tf
infrastructure/aws/modules/sqs/: outputs.tf  variables.tf
infrastructure/modules/lambda_function/: main.tf  variables.tf
infrastructure/modules/lambda_layer/: main.tf  outputs.tf  variables.tf
infrastructure/modules/sqs/: main.tf
infrastructure/setup/: aws.sh
infrastructure/src/: lambda_handler.py  lambda_handler.py.old  lambda_handler2.py
requirements/: base.txt  dev.txt
tests/integration/: conftest.py  test_config.py  test_provider.py  test_session.py
tests/unit/: conftest.py  test_config.py  test_controller.py  test_optimizer.py  test_parser.py  test_planner.py  test_provider.py  test_session.py  test_utils.py
tests/unit/data/: test_data.json  test_data.parquet
